# agentic-identity

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GUIDE.md  INSTALL.md  Makefile  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: canonical-sister-guardrails.yml  ci.yml  install-command-guardrails.yml  python-sdk-tests.yml  release.yml  social-release-broadcast.yml
benches/: crypto_bench.rs
crates/agentic-identity/: Cargo.toml
crates/agentic-identity-cli/: Cargo.toml
crates/agentic-identity-cli/src/: main.rs
crates/agentic-identity-ffi/: Cargo.toml  cbindgen.toml
crates/agentic-identity-ffi/src/: lib.rs
crates/agentic-identity-mcp/: Cargo.toml
crates/agentic-identity-mcp/src/: ghost_bridge.rs  invention_accountability.rs  invention_federation.rs  invention_resilience.rs  invention_trust_dynamics.rs  main.rs
crates/agentic-identity/examples/: basic_identity.rs  sign_action.rs  trust_delegation.rs
crates/agentic-identity/src/: contracts.rs  error.rs  lib.rs  time.rs
crates/agentic-identity/src/competence/: engine.rs  mod.rs  types.rs
crates/agentic-identity/src/continuity/: engine.rs  mod.rs  types.rs
crates/agentic-identity/src/crypto/: derivation.rs  encryption.rs  keys.rs  mod.rs  random.rs  signing.rs
crates/agentic-identity/src/identity/: anchor.rs  mod.rs
crates/agentic-identity/src/index/: mod.rs
crates/agentic-identity/src/negative/: engine.rs  mod.rs  types.rs
crates/agentic-identity/src/query/: mod.rs
crates/agentic-identity/src/receipt/: action.rs  chain.rs  mod.rs  receipt.rs  verify.rs  witness.rs
crates/agentic-identity/src/spawn/: engine.rs  mod.rs  types.rs
crates/agentic-identity/src/storage/: identity_file.rs  mod.rs  receipt_store.rs  spawn_store.rs  trust_store.rs
crates/agentic-identity/src/trust/: capability.rs  chain.rs  constraint.rs  grant.rs  mod.rs  revocation.rs  verify.rs
docs/: api-reference.md  benchmarks.md  command-surface.md  concepts.md  faq.md  file-format.md  integration-guide.md  quickstart.md  runtime-install-sync.md
docs/ecosystem/: CANONICAL_SISTER_KIT.md
docs/public/: api-reference.md  architecture.md  benchmarks.md  cli-reference.md  command-surface.md  concepts.md  configuration.md  experience-with-vs-without.md  faq.md  ffi-reference.md  file-format.md  guide.md  implementation-2026-02-22.md  initial-problem-coverage.md  installation.md  integration-guide.md  mcp-prompts.md  mcp-resources.md  mcp-tools.md  overview.md  primary-problem-coverage.md  quickstart.md  runtime-install-sync.md  sister.manifest.json  troubleshooting.md
examples/: README.md  basic_identity.rs  python_example.py  sign_action.rs  trust_delegation.rs
npm/wasm/: Cargo.toml
npm/wasm/src/: lib.rs
paper/paper-i-trust-anchor/: agenticidentity-paper.aux  agenticidentity-paper.bbl  agenticidentity-paper.blg  agenticidentity-paper.out  agenticidentity-paper.tex  references.bib
planning-docs/: AGENTIC-IDENTITY-COMPLETE-SPECIFICATION.md  CLAUDE-CODE-INSTRUCTIONS.md  SPEC-CI-GUARDRAILS.md  SPEC-CLI.md  SPEC-DATA-STRUCTURES.md  SPEC-DEPENDENCIES.md  SPEC-DOCS-PUBLIC-SYNC.md  SPEC-FFI.md  SPEC-FILE-FORMAT.md  SPEC-INDEXES.md  SPEC-INSTALLER-UNIVERSAL.md  SPEC-MCP.md  SPEC-PROJECT-STRUCTURE.md  SPEC-QUERY-ENGINE.md  SPEC-RELEASE-PUBLISH.md  SPEC-RESEARCH-PAPER.md  SPEC-RUNTIME-HARDENING.md  SPEC-TESTS.md  SPEC-WRITE-ENGINE.md  agentic-identity-invention.md
planning-docs/plan-contd/: MASTER-EXECUTION-PLAN.md  STRESS-TEST-ALL-SISTERS.md
planning-docs/plan-contd2/: IDENTITY-V01-COMPETENCE-NEGATIVE.md  IDENTITY-V01-COMPLETION.md  PYPI-BACKFILL-VISION-CODEBASE.md
python/: README.md  pyproject.toml
python/src/agentic_identity/: __init__.py  _ffi.py  errors.py  models.py
python/tests/: conftest.py  test_errors.py  test_identity.py  test_models.py  test_package.py
release-notes/: v0.1.0.md
scripts/: check-canonical-sister.sh  check-install-commands.sh  install.sh  publish.sh  test-primary-problems.sh
tests/integration/: cli_tests.rs  full_workflow.rs
tests/stress/: concurrency_trust.rs  concurrent_signing.rs  edge_cases_identity.rs  edge_cases_inventions.rs  multi_identity.rs  receipt_chain_length.rs  resilience.rs  scale_continuity.rs  scale_receipts.rs  scale_spawn.rs  trust_chain_depth.rs
