[workspace]
members = [
    "crates/agentic-identity",
    "crates/agentic-identity-mcp",
    "crates/agentic-identity-cli",
    "crates/agentic-identity-ffi",
]
resolver = "2"
exclude = ["npm/wasm"]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/agentralabs/agentic-identity"
homepage = "https://agentralabs.tech"
authors = ["Agentra Labs <contact@agentralabs.tech>"]

[workspace.dependencies]
# Crypto
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
x25519-dalek = { version = "2.0", features = ["serde", "static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
rand_core = "0.6"
argon2 = "0.5"
chacha20poly1305 = "0.10"
zeroize = { version = "1.7", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
base64 = "0.21"
hex = "0.4"
bs58 = "0.5"

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Async
tokio = { version = "1.35", features = ["full"] }

# Logging
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Testing
criterion = "0.5"
tempfile = "3.9"
