[package]
name = "agentic-identity-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "CLI tool for AgenticIdentity — create identities, sign actions, manage trust"
keywords = ["ai", "agent", "identity", "cli", "trust"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "aid"
path = "src/main.rs"

[dependencies]
agentic-identity = { path = "../agentic-identity", version = "0.3.0" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
env_logger.workspace = true
log.workspace = true
thiserror.workspace = true
anyhow.workspace = true
base64.workspace = true

# Integration tests (workspace-level)
[[test]]
name = "cli_tests"
path = "../../tests/integration/cli_tests.rs"
