[package]
name = "agentic-identity-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "MCP server for AgenticIdentity — expose identity operations to AI agents"
keywords = ["mcp", "ai", "agent", "identity", "llm"]
categories = ["development-tools", "cryptography"]

[[bin]]
name = "agentic-identity-mcp"
path = "src/main.rs"

[dependencies]
agentic-identity = { path = "../agentic-identity", version = "0.2.4" }
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true
