[package]
name = "agentic-identity-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "WebAssembly bindings for AgenticIdentity"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
agentic-identity = { path = "../../crates/agentic-identity" }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"
hex = "0.4"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "s"
lto = true
